--- a/Projeto04/css/style.css
+++ b/Projeto04/css/style.css
@@ -9,9 +9,6 @@
     max-width: 1100px;
     width: 80%;
     margin: 0 auto;
-    border-radius: 10px;
-    background-color: #fff;
-    padding: 30px;
 }
 
 h1,
@@ -32,10 +29,164 @@ a {
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
-    color: grey;
+    color: #000;
 }
 
 a {
     text-decoration: none;
     color: #000;
 }
+
+/* ****
+HEADER
+**** */
+
+header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    background-color: #e6f9fe;
+}
+
+header .menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+}
+
+header .menu .button a {
+    background-color: #fff;
+    border-radius: 30px;
+    padding: 8px 35px;
+    box-shadow: 0 0 10px #80808069;
+    transition: all 0.3s;
+}
+
+header .menu .button a:hover {
+    background-color: #c5eef9;
+    box-shadow: #808080cc;
+}
+
+/* **** MAIN **** */
+/* *** CONTENT *** */
+
+/* ****
+BANNER
+**** */
+
+.banner {
+    background: url("../img/bg-hero-desktop.svg");
+    height: 718px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.banner .container .text {
+    width: 40%;
+}
+
+.banner .container .image {
+    width: 50%;
+}
+
+.banner .container .text h1 {
+    line-height: 40px;
+}
+
+.banner .container .text p {
+    margin: 20px 0;
+}
+
+.banner .container .text p {
+    margin: 20px 0;
+}
+
+.banner .container .text a {
+    padding: 8px 35px;
+    background-color: #fe839f;
+    color: #fff;
+    border-radius: 30px;
+    transition: all 0.3s;
+}
+
+.banner .container .text a:hover {
+    background-color: #bb51ea;
+    color: #000;
+}
+
+/* ****
+CONTENT_1
+**** */
+
+.content_1 {
+    padding: 60px 0;
+}
+
+.content_1 .item {
+    width: 100%;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #80808069;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 60px;
+}
+
+.content_1 .item.invert {
+    flex-direction: row-reverse;
+}
+
+.content_1 .item .text {
+    width: 45%;
+}
+
+.content_1 .item .image {
+    width: 40%;
+}
+
+/* ****
+BOTTOM
+**** */
+
+.bottom .container {
+    background: #fff;
+    width: 55%;
+    height: 200px;
+    box-shadow: 0 0 10px #80808069;
+    border-radius: 20px;
+}
+
+.bottom .container h2 {
+    font-size: 30;
+    text-align: center;
+    padding: 35px 0;
+}
+
+.bottom a{
+    padding: 8px 35px;
+    background-color: #fe839f;
+    color: #fff;
+    border-radius: 30px;
+    transition: all 0.3s;
+    position: absolute;
+    left: 34%;
+    box-shadow: 0 0 10px #80808069;
+}
+
+.bottom a:hover {
+    background-color: #bb51ea;
+    color: #000;
+    box-shadow: #808080cc;
+}
+
+/* ****
+BOTTOM
+**** */
+
