--- a/EstruturaSASS/css/2-layouts/content_apresentacao.scss
+++ b/EstruturaSASS/css/2-layouts/content_apresentacao.scss
@@ -49,6 +49,7 @@
             color: #03738c;
             height: 60px;
             width: 100%;
+            z-index: 1;
             box-shadow: 0 0 10px #d8f1f1;
             left: 105px;
           }
