--- a/CloneZortea/css/2-layouts/home.scss
+++ b/CloneZortea/css/2-layouts/home.scss
@@ -7,3 +7,16 @@
   ================================
 */
 
+/* 
+  ================================
+  CONTENT 1
+  ================================
+*/
+
+.content_1 {
+  padding: 30px;
+
+  & h1 {
+  }
+  text-align: center;
+}
