--- a/CloneZortea/css/3-modules/_button.scss
+++ b/CloneZortea/css/3-modules/_button.scss
@@ -1,3 +1,25 @@
 @use '../1-base/main.scss';
 @use '../1-base/reset.scss';
 
+/* 
+  ================================
+  BUTTON
+  ================================
+*/
+
+.button {
+    padding: 12px 15px;
+    width: 250px;
+    background-color: main.$ColorSix;
+    text-align: center;
+    transition: all 0.3s;
+    cursor: pointer;
+
+    & a {
+        color: main.$ColorTwo;
+    }
+
+    &:hover {
+        background-color: main.$ColorZero;
+    }
+}
